[tool.poetry]
name = "dpo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
datasets = "^3.0.1"
pyarrow = "16.0.0"
torch = { version = "<2.3", source="pypi" }
trl = "^0.11.4"
evaluate = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"